dc.yaml
apiVersion: apps.openshift.io/v1
kind: DeploymentConfig
metadata:
  annotations:
    openshift.io/generated-by: OpenShiftNewApp
  labels:
    app: myflaskapp-old
    app.kubernetes.io/component: myflaskapp-old
    app.kubernetes.io/instance: myflaskapp-old
  name: myflaskapp-old
  namespace: myproject
spec:
  replicas: 1
  revisionHistoryLimit: 10
  selector:
    deploymentconfig: myflaskapp-old
  strategy:
    activeDeadlineSeconds: 21600
    resources: {}
    rollingParams:
      intervalSeconds: 1
      maxSurge: 25%
      maxUnavailable: 25%
      timeoutSeconds: 600
      updatePeriodSeconds: 1
    type: Rolling
  template:
    metadata:
      annotations:
        openshift.io/generated-by: OpenShiftNewApp
      labels:
        deploymentconfig: myflaskapp-old
    spec:
      volumes:
        - name: my-new-storage-claim
          persistentVolumeClaim:
            claimName: my-new-storage-claim
      containers:
      - image: image-registry.openshift-image-registry.svc:5000/myproject/myflaskapp-old@sha256:27fb3f77123c339f01e9e419c214448b1d08d72f053e06d446d5323e0e0b19bf
        imagePullPolicy: Always
        name: myflaskapp-old
        ports:
        - containerPort: 8080
          protocol: TCP
        resources: {}
        volumeMounts:
          - name: my-new-storage-claim
            mountPath: /new-sridhar
        terminationMessagePath: /dev/termination-log
        terminationMessagePolicy: File
      dnsPolicy: ClusterFirst
      restartPolicy: Always
      schedulerName: default-scheduler
      securityContext: {}
      terminationGracePeriodSeconds: 30
  test: false
  triggers:
  - type: ConfigChange
  - imageChangeParams:
      automatic: true
      containerNames:
      - myflaskapp-old
      from:
        kind: ImageStreamTag
        name: myflaskapp-old:latest
        namespace: myproject
    type: ImageChange
