svc.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    openshift.io/generated-by: OpenShiftNewApp
  labels:
    app: myflaskapp-old
    app.kubernetes.io/component: myflaskapp-old
    app.kubernetes.io/instance: myflaskapp-old
  name: myflaskapp-old
  namespace: myproject
spec:
  ports:
  - name: 8080-tcp
    port: 8080
    protocol: TCP
    targetPort: 8080
  selector:
    deploymentconfig: myflaskapp-old
  sessionAffinity: None
  type: ClusterIP
